--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,10 +13,12 @@
 
   <!-- include source files here... -->
   <script src="src/Game.js"></script>
+  <script src="src/Player.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/GameSpec.js"></script>
+  <script src="spec/PlayerSpec.js"></script>
 
 </head>
 
